--- a/MiniApp/package.json
+++ b/MiniApp/package.json
@@ -1,19 +1,16 @@
 {
   "name": "miniapp",
-  "homepage": "https://rakharan.github.io/skilltest-ip",
+  "homepage": "https://sagameda.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.2.1",
-    "gh-pages": "^4.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
