--- a/MiniApp/package.json
+++ b/MiniApp/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.5",
     "axios": "^1.2.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
